--- a/boot/ramdisk/init.amlogic.rc
+++ b/boot/ramdisk/init.amlogic.rc
@@ -6,22 +6,19 @@ on early-init
 
 on init
     chmod 0701 /mnt/media_rw
-    mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage 0550 system sdcard_r
-    mkdir /storage/emulated 0555 root root
+    mkdir /storage/sdcard0 0000 system system
     mkdir /storage/sdcard1 0000 system system
     mkdir /storage/usbdisk0 0000 system system
+    mkdir /mnt/media_rw/sdcard0 0775 system system
     mkdir /mnt/media_rw/sdcard1 0775 system system
     mkdir /mnt/media_rw/usbdisk0 0775 system system
     
-    export EXTERNAL_STORAGE /storage/emulated/legacy
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
+    export EXTERNAL_STORAGE /storage/sdcard0
+    export SECONDARY_STORAGE /storage/sdcard1
     
-    symlink /storage/emulated/legacy /sdcard
-    symlink /storage/emulated/legacy /mnt/sdcard
-    symlink /storage/emulated/legacy /storage/sdcard0
-    symlink /mnt/shell/emulated/0 /storage/emulated/legacy
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
     symlink /storage/sdcard1 /extsd
     symlink /storage/sdcard1 /mnt/extsd
     symlink /storage/usbdisk0 /usbdisk0
@@ -449,8 +446,9 @@ service audio /system/bin/alsa_ctl restore
 service usbpm /system/bin/usbtestpm_mx_iddq
     disabled
     
-service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard0 /storage/sdcard0
     class late_start
+    disabled
 
 service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard1 /storage/sdcard1
     class late_start
