--- a/boot/boot/ueventd.rc
+++ b/boot/boot/ueventd.rc
@@ -78,6 +78,7 @@
 /dev/mtp_usb              0660   root       mtp
 /dev/usb_accessory        0660   root       usb
 /dev/tun                  0660   system     vpn
+/dev/rfkill               0660   root       wifi
 
 # CDMA radio interface MUX
 /dev/ts0710mux*           0640   radio      radio
